--- a/mPulse/TestProject/TestProject.vcxproj.filters
+++ b/mPulse/TestProject/TestProject.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BMP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
