Added a class, MainMenu.cpp to produce a "Main Menu"
Changed some stuff in TestProject.cpp to integrate MainMenu in....
  -Created a separate function to handle the controls
  -Bug Fixed: added a break so only button1:joystick produces a block, not any keyboard key

--- a/mPulse/TestProject/TestProject.vcxproj
+++ b/mPulse/TestProject/TestProject.vcxproj
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BMP.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Object_OBJ.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader.h" />
@@ -94,6 +95,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Object_OBJ.cpp" />
     <ClCompile Include="renderer.cpp" />
     <ClCompile Include="Shader.cpp" />
