--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -37,10 +37,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\SDL\SDL-1.2.15\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\CPSC585\SDL-1.2.15\include;C:\SDL\SDL-1.2.15\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>C:\SDL\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\CPSC585\SDL-1.2.15\lib\x86;C:\SDL\SDL-1.2.15\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>C:\SDL\SDL-1.2.15\include;$(IncludePath)</IncludePath>
@@ -78,25 +78,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Entities\Entity.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
     <ClCompile Include="GameStates\GameState.cpp" />
     <ClCompile Include="GameStates\InitState.cpp" />
     <ClCompile Include="GameStates\PlayState.cpp" />
-    <ClCompile Include="GameStates\RenderingEngine.cpp" />
     <ClCompile Include="Input\XboxController.cpp" />
+    <ClCompile Include="ModelLoader\ModelManager.cpp" />
+    <ClCompile Include="ModelLoader\ObjModel.cpp" />
     <ClCompile Include="mPULSE.cpp" />
+    <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
+    <ClCompile Include="RenderingEngine\Appearance.cpp" />
+    <ClCompile Include="RenderingEngine\RenderingEngine.cpp" />
     <ClCompile Include="Util\Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Entities\Entity.h" />
     <ClInclude Include="GameStates\Game.h" />
     <ClInclude Include="GameStates\GameState.h" />
     <ClInclude Include="GameStates\InitState.h" />
     <ClInclude Include="GameStates\PlayState.h" />
-    <ClInclude Include="GameStates\RenderingEngine.h" />
     <ClInclude Include="Input\XboxController.h" />
+    <ClInclude Include="ModelLoader\ModelManager.h" />
+    <ClInclude Include="ModelLoader\ObjModel.h" />
+    <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
+    <ClInclude Include="RenderingEngine\Appearance.h" />
+    <ClInclude Include="RenderingEngine\RenderingEngine.h" />
     <ClInclude Include="Util\Clock.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ModelLoader\ModelList.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
