--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
@@ -43,6 +43,18 @@
     <Filter Include="Source Files\RenderingEngine">
       <UniqueIdentifier>{9b374871-c715-4a74-b464-623aded29154}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Entity">
+      <UniqueIdentifier>{e3ac21f7-c816-4c50-bc15-21621e2fc06d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Entity">
+      <UniqueIdentifier>{a3582aa2-f59e-4c94-9992-439e7d449509}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ModelLoader">
+      <UniqueIdentifier>{6106e55f-355c-4478-830a-56a157299ab8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ModelLoader">
+      <UniqueIdentifier>{efa21aac-2e65-4383-b114-83cc0bbfd6a0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="mPULSE.cpp">
@@ -69,8 +81,23 @@
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp">
       <Filter>Source Files\PhysicsEngine</Filter>
     </ClCompile>
-    <ClCompile Include="GameStates\RenderingEngine.cpp">
+    <ClCompile Include="Entities\Entity.cpp">
+      <Filter>Source Files\Entity</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderingEngine\Appearance.cpp">
       <Filter>Source Files\RenderingEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderingEngine\RenderingEngine.cpp">
+      <Filter>Source Files\RenderingEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsEngine\Physics.cpp">
+      <Filter>Source Files\PhysicsEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelLoader\ModelManager.cpp">
+      <Filter>Source Files\ModelLoader</Filter>
+    </ClCompile>
+    <ClCompile Include="ModelLoader\ObjModel.cpp">
+      <Filter>Source Files\ModelLoader</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -95,8 +122,26 @@
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h">
       <Filter>Header Files\PhysicsEngine</Filter>
     </ClInclude>
-    <ClInclude Include="GameStates\RenderingEngine.h">
+    <ClInclude Include="Entities\Entity.h">
+      <Filter>Header Files\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="RenderingEngine\Appearance.h">
       <Filter>Header Files\RenderingEngine</Filter>
     </ClInclude>
+    <ClInclude Include="RenderingEngine\RenderingEngine.h">
+      <Filter>Header Files\RenderingEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsEngine\Physics.h">
+      <Filter>Header Files\PhysicsEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelLoader\ModelManager.h">
+      <Filter>Header Files\ModelLoader</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelLoader\ObjModel.h">
+      <Filter>Header Files\ModelLoader</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ModelLoader\ModelList.txt" />
   </ItemGroup>
 </Project>
