Added functionality for Texture loading, and display Revised drawCube to have normals, and texture coordiates Added BMP.h to allow for BMP texture loading

--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
     <ClInclude Include="RenderingEngine\Appearance.h" />
+    <ClInclude Include="RenderingEngine\BMP.h" />
     <ClInclude Include="RenderingEngine\RenderingEngine.h" />
     <ClInclude Include="RenderingEngine\Shader.h" />
     <ClInclude Include="Util\Clock.h" />
