--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="RenderingEngine\Shader.cpp">
       <Filter>Source Files\RenderingEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Console.cpp">
+      <Filter>Source Files\GameStates</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\XboxController.h">
@@ -148,6 +151,9 @@
     </ClInclude>
     <ClInclude Include="RenderingEngine\BMP.h">
       <Filter>Header Files\RenderingEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="Console.h">
+      <Filter>Header Files\GameStates</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
