--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -79,8 +79,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Console.cpp" />
     <ClCompile Include="Entities\Entity.cpp" />
+    <ClCompile Include="GameStates\Console.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
     <ClCompile Include="GameStates\GameState.cpp" />
     <ClCompile Include="GameStates\InitState.cpp" />
@@ -97,8 +97,8 @@
     <ClCompile Include="Util\Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Console.h" />
     <ClInclude Include="Entities\Entity.h" />
+    <ClInclude Include="GameStates\Console.h" />
     <ClInclude Include="GameStates\Game.h" />
     <ClInclude Include="GameStates\GameState.h" />
     <ClInclude Include="GameStates\InitState.h" />
