--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -80,6 +80,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Entities\Entity.cpp" />
+    <ClCompile Include="Entities\EntityComponent.cpp" />
     <ClCompile Include="GameStates\Console.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
     <ClCompile Include="GameStates\GameState.cpp" />
@@ -98,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Entities\Entity.h" />
+    <ClInclude Include="Entities\EntityComponent.h" />
     <ClInclude Include="GameStates\Console.h" />
     <ClInclude Include="GameStates\Game.h" />
     <ClInclude Include="GameStates\GameState.h" />
