Fixed lighting of debugphysic allow scene to be turned off with tog showscene
Tried to create a car with wheels. Currently a car is created as an act. "wheels" are create on the car. but the "wheels" seem to be uninitialized and i couldn't find a find to attempt to try to control the wheels.

--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="ModelLoader\ModelManager.cpp" />
     <ClCompile Include="ModelLoader\ObjModel.cpp" />
     <ClCompile Include="mPULSE.cpp" />
+    <ClCompile Include="PhysicsEngine\NxWheelDesc.cpp" />
     <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
     <ClCompile Include="RenderingEngine\Appearance.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="Input\XboxController.h" />
     <ClInclude Include="ModelLoader\ModelManager.h" />
     <ClInclude Include="ModelLoader\ObjModel.h" />
+    <ClInclude Include="PhysicsEngine\NxWheelDesc.h" />
     <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
     <ClInclude Include="RenderingEngine\Appearance.h" />
