--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Entities\EntityComponent.cpp">
       <Filter>Source Files\Entity</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicsEngine\NxWheelDesc.cpp">
+      <Filter>Source Files\PhysicsEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Input\XboxController.h">
@@ -160,6 +163,9 @@
     </ClInclude>
     <ClInclude Include="Entities\EntityComponent.h">
       <Filter>Header Files\Entity</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsEngine\NxWheelDesc.h">
+      <Filter>Header Files\PhysicsEngine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
