--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClCompile Include="Entities\Entity.cpp" />
     <ClCompile Include="Entities\EntityComponent.cpp" />
+    <ClCompile Include="GameStates\Camera.cpp" />
     <ClCompile Include="GameStates\Console.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
     <ClCompile Include="GameStates\GameState.cpp" />
@@ -100,6 +101,7 @@
   <ItemGroup>
     <ClInclude Include="Entities\Entity.h" />
     <ClInclude Include="Entities\EntityComponent.h" />
+    <ClInclude Include="GameStates\Camera.h" />
     <ClInclude Include="GameStates\Console.h" />
     <ClInclude Include="GameStates\Game.h" />
     <ClInclude Include="GameStates\GameState.h" />
