Created a function to create a triangle mesh object in the physicEngine!

--- a/mPULSE refactored/mPULSE/mPULSE.vcxproj
+++ b/mPULSE refactored/mPULSE/mPULSE.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="mPULSE.cpp" />
     <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
+    <ClCompile Include="PhysicsEngine\Stream.cpp" />
     <ClCompile Include="RenderingEngine\RenderingEngine.cpp" />
     <ClCompile Include="RenderingEngine\Shader.cpp" />
     <ClCompile Include="Util\Clock.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="ModelLoader\ObjModel.h" />
     <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
+    <ClInclude Include="PhysicsEngine\stream.h" />
     <ClInclude Include="RenderingEngine\BMP.h" />
     <ClInclude Include="RenderingEngine\RenderingEngine.h" />
     <ClInclude Include="RenderingEngine\Shader.h" />
