--- a/mPULSE Project/mPULSE/mPULSE.vcxproj
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="RenderingEngine\Shader.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SoundEngine.cpp" />
+    <ClCompile Include="Track.cpp" />
     <ClCompile Include="Util\Clock.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +131,7 @@
     <ClInclude Include="RenderingEngine\Shader.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEngine.h" />
+    <ClInclude Include="Track.h" />
     <ClInclude Include="Util\Clock.h" />
   </ItemGroup>
   <ItemGroup>
