--- a/mPULSE Project/mPULSE/mPULSE.vcxproj
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="GameStates\Console.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
     <ClCompile Include="GameStates\GameState.cpp" />
+    <ClCompile Include="GameStates\GameVariables.cpp" />
     <ClCompile Include="GameStates\InitState.cpp" />
     <ClCompile Include="GameStates\MainMenuState.cpp" />
     <ClCompile Include="GameStates\PlayState.cpp" />
@@ -99,12 +100,14 @@
     <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
     <ClCompile Include="PhysicsEngine\Stream.cpp" />
+    <ClCompile Include="RenderingEngine\Particle.cpp" />
     <ClCompile Include="RenderingEngine\RenderingEngine.cpp" />
     <ClCompile Include="RenderingEngine\Shader.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="SoundEngine.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="Util\Clock.cpp" />
+    <ClCompile Include="Util\Profile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AI\AI.h" />
@@ -117,6 +120,7 @@
     <ClInclude Include="GameStates\Console.h" />
     <ClInclude Include="GameStates\Game.h" />
     <ClInclude Include="GameStates\GameState.h" />
+    <ClInclude Include="GameStates\GameVariables.h" />
     <ClInclude Include="GameStates\InitState.h" />
     <ClInclude Include="GameStates\MainMenuState.h" />
     <ClInclude Include="GameStates\PlayState.h" />
@@ -127,12 +131,14 @@
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
     <ClInclude Include="PhysicsEngine\stream.h" />
     <ClInclude Include="RenderingEngine\BMP.h" />
+    <ClInclude Include="RenderingEngine\Particle.h" />
     <ClInclude Include="RenderingEngine\RenderingEngine.h" />
     <ClInclude Include="RenderingEngine\Shader.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEngine.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="Util\Clock.h" />
+    <ClInclude Include="Util\Profile.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ModelLoader\ModelList.txt" />
