Reorganized the code

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj
@@ -82,9 +82,6 @@
     <ClCompile Include="AI\AI.cpp" />
     <ClCompile Include="AI\Waypoint.cpp" />
     <ClCompile Include="AI\Waypoints.cpp" />
-    <ClCompile Include="Entities\Entity.cpp" />
-    <ClCompile Include="Entities\EntityComponent.cpp" />
-    <ClCompile Include="Entities\RenderableComponent.cpp" />
     <ClCompile Include="GameStates\Camera.cpp" />
     <ClCompile Include="GameStates\Console.cpp" />
     <ClCompile Include="GameStates\Game.cpp" />
@@ -93,19 +90,25 @@
     <ClCompile Include="GameStates\InitState.cpp" />
     <ClCompile Include="GameStates\MainMenuState.cpp" />
     <ClCompile Include="GameStates\PlayState.cpp" />
+    <ClCompile Include="InGameObjects\Entities\Entity.cpp" />
+    <ClCompile Include="InGameObjects\Entities\EntityComponent.cpp" />
+    <ClCompile Include="InGameObjects\Entities\RenderableComponent.cpp" />
+    <ClCompile Include="InGameObjects\Track.cpp" />
     <ClCompile Include="Input\XboxController.cpp" />
+    <ClCompile Include="Missile.cpp" />
+    <ClCompile Include="MissileLauncher.cpp" />
     <ClCompile Include="ModelLoader\ModelManager.cpp" />
     <ClCompile Include="ModelLoader\ObjModel.cpp" />
     <ClCompile Include="mPULSE.cpp" />
     <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
     <ClCompile Include="PhysicsEngine\Stream.cpp" />
+    <ClCompile Include="Pickup.cpp" />
     <ClCompile Include="RenderingEngine\Particle.cpp" />
     <ClCompile Include="RenderingEngine\RenderingEngine.cpp" />
     <ClCompile Include="RenderingEngine\Shader.cpp" />
-    <ClCompile Include="Sound.cpp" />
-    <ClCompile Include="SoundEngine.cpp" />
-    <ClCompile Include="Track.cpp" />
+    <ClCompile Include="SoundEngine\Sound.cpp" />
+    <ClCompile Include="SoundEngine\SoundEngine.cpp" />
     <ClCompile Include="Util\Clock.cpp" />
     <ClCompile Include="Util\Profile.cpp" />
   </ItemGroup>
@@ -113,9 +116,6 @@
     <ClInclude Include="AI\AI.h" />
     <ClInclude Include="AI\Waypoint.h" />
     <ClInclude Include="AI\Waypoints.h" />
-    <ClInclude Include="Entities\Entity.h" />
-    <ClInclude Include="Entities\EntityComponent.h" />
-    <ClInclude Include="Entities\RenderableComponent.h" />
     <ClInclude Include="GameStates\Camera.h" />
     <ClInclude Include="GameStates\Console.h" />
     <ClInclude Include="GameStates\Game.h" />
@@ -124,19 +124,25 @@
     <ClInclude Include="GameStates\InitState.h" />
     <ClInclude Include="GameStates\MainMenuState.h" />
     <ClInclude Include="GameStates\PlayState.h" />
+    <ClInclude Include="InGameObjects\Entities\Entity.h" />
+    <ClInclude Include="InGameObjects\Entities\EntityComponent.h" />
+    <ClInclude Include="InGameObjects\Entities\RenderableComponent.h" />
+    <ClInclude Include="InGameObjects\Track.h" />
     <ClInclude Include="Input\XboxController.h" />
+    <ClInclude Include="Missile.h" />
+    <ClInclude Include="MissileLauncher.h" />
     <ClInclude Include="ModelLoader\ModelManager.h" />
     <ClInclude Include="ModelLoader\ObjModel.h" />
     <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
     <ClInclude Include="PhysicsEngine\stream.h" />
+    <ClInclude Include="Pickup.h" />
     <ClInclude Include="RenderingEngine\BMP.h" />
     <ClInclude Include="RenderingEngine\Particle.h" />
     <ClInclude Include="RenderingEngine\RenderingEngine.h" />
     <ClInclude Include="RenderingEngine\Shader.h" />
-    <ClInclude Include="Sound.h" />
-    <ClInclude Include="SoundEngine.h" />
-    <ClInclude Include="Track.h" />
+    <ClInclude Include="SoundEngine\Sound.h" />
+    <ClInclude Include="SoundEngine\SoundEngine.h" />
     <ClInclude Include="Util\Clock.h" />
     <ClInclude Include="Util\Profile.h" />
   </ItemGroup>
