Fixed filepath issues and added a pickup framework

--- a/mPULSE Project/mPULSE/mPULSE.vcxproj
+++ b/mPULSE Project/mPULSE/mPULSE.vcxproj
@@ -93,17 +93,17 @@
     <ClCompile Include="InGameObjects\Entities\Entity.cpp" />
     <ClCompile Include="InGameObjects\Entities\EntityComponent.cpp" />
     <ClCompile Include="InGameObjects\Entities\RenderableComponent.cpp" />
+    <ClCompile Include="InGameObjects\Pickups\Missile.cpp" />
+    <ClCompile Include="InGameObjects\Pickups\MissileLauncher.cpp" />
+    <ClCompile Include="InGameObjects\Pickups\Pickup.cpp" />
     <ClCompile Include="InGameObjects\Track.cpp" />
     <ClCompile Include="Input\XboxController.cpp" />
-    <ClCompile Include="Missile.cpp" />
-    <ClCompile Include="MissileLauncher.cpp" />
     <ClCompile Include="ModelLoader\ModelManager.cpp" />
     <ClCompile Include="ModelLoader\ObjModel.cpp" />
     <ClCompile Include="mPULSE.cpp" />
     <ClCompile Include="PhysicsEngine\Physics.cpp" />
     <ClCompile Include="PhysicsEngine\PhysicsEngine.cpp" />
     <ClCompile Include="PhysicsEngine\Stream.cpp" />
-    <ClCompile Include="Pickup.cpp" />
     <ClCompile Include="RenderingEngine\Particle.cpp" />
     <ClCompile Include="RenderingEngine\RenderingEngine.cpp" />
     <ClCompile Include="RenderingEngine\Shader.cpp" />
@@ -127,16 +127,16 @@
     <ClInclude Include="InGameObjects\Entities\Entity.h" />
     <ClInclude Include="InGameObjects\Entities\EntityComponent.h" />
     <ClInclude Include="InGameObjects\Entities\RenderableComponent.h" />
+    <ClInclude Include="InGameObjects\Pickups\Missile.h" />
+    <ClInclude Include="InGameObjects\Pickups\MissileLauncher.h" />
+    <ClInclude Include="InGameObjects\Pickups\Pickup.h" />
     <ClInclude Include="InGameObjects\Track.h" />
     <ClInclude Include="Input\XboxController.h" />
-    <ClInclude Include="Missile.h" />
-    <ClInclude Include="MissileLauncher.h" />
     <ClInclude Include="ModelLoader\ModelManager.h" />
     <ClInclude Include="ModelLoader\ObjModel.h" />
     <ClInclude Include="PhysicsEngine\Physics.h" />
     <ClInclude Include="PhysicsEngine\PhysicsEngine.h" />
     <ClInclude Include="PhysicsEngine\stream.h" />
-    <ClInclude Include="Pickup.h" />
     <ClInclude Include="RenderingEngine\BMP.h" />
     <ClInclude Include="RenderingEngine\Particle.h" />
     <ClInclude Include="RenderingEngine\RenderingEngine.h" />
